2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Progress.h,
	  src/Dialog_Progress.cc,
	  src/Win_GParted.cc: deal correctly with the progressdialog's
	  delete_event.
	
2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Partition_Info.h,
	  include/Win_GParted.h,
	  src/Win_GParted.cc: cleanups

2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Partition.h: added FIXME
	* src/Partition.cc: fixed Update_Number()

2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Progress.h,
	  src/Dialog_Progress.cc,
	  src/Win_GParted.cc: made some changes to progressdialog behaviour.
	  
2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* gparted.desktop.in,
	  src/Dialog_Progress.cc,
	  src/Win_GParted.cc: string tweaks. (#328685)

2006-01-25 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Utils.h,
	  src/Utils.cc,
	  src/jfs.cc,
	  src/xfs.cc: fixed small issue with mounting. (discovered on the
	  livecd)

2006-01-25 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: improved scanning for root mountpoint (/)
	* src/Dialog_Partition_Info.cc: use Utils::format_size() instead of
	  displaying every value in MiB's. Also some cleanups and changes.

2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Progress.h,
	  src/Dialog_Progress.cc: implemented real 'cancel'.

2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Utils.cc: use realpath() to get absolute path to 'real'
	  /etc/mtab.
	  unmount if something went wrong while adding the line to '/etc/mtab'
	* src/Dialog_Progress.cc: replaced PACK_SHRINK with PACK_EXPAND_WIDGET
	
2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: swapped 'line' and 'c_str' to make
	  get_short_path() work properly.
	
2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/jfs.cc,
	  src/xfs.cc: replaced translatable string 'umount' with 'unmount'
	  (#328419)

2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
