@@ -1,3 +1,9 @@
+2006-01-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Dialog_Progress.h,
+	  src/Dialog_Progress.cc,
+	  src/FileSystem.cc: added markup to operationdetails
+
 2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/Dialog_Progress.h,
